[ master ] - emacs, improved 'which-key' description for 'org-noter' bindings.

--- a/emacs/configuration.org
+++ b/emacs/configuration.org
@@ -5106,6 +5106,7 @@ Take the =org-level-1= as an example:
 
 
 *** =pdf-tools=
+
 #+BEGIN_SRC emacs-lisp
   ;;
   ;; 
@@ -5136,9 +5137,6 @@ Take the =org-level-1= as an example:
       (define-key evil-normal-state-local-map (kbd "<") 'pdf-view-first-page)
       (define-key evil-normal-state-local-map (kbd ">") 'pdf-view-last-page)
 
-
-      ;; disable line number
-      (display-line-numbers-mode -1)
       ;; (define-key evil-normal-state-local-map (kbd "e") 'my-xxxxx)
       (message ">>> [ my-pdf-scroll-local ] Set 'e' to local buffer")
   )
@@ -5187,6 +5185,18 @@ Take the =org-level-1= as an example:
       (define-key evil-normal-state-local-map (kbd "C-c n p") 'org-noter-insert-precise-note)
       (define-key evil-normal-state-local-map (kbd "C-c n a") 'org-noter-set-auto-save-last-location)
 
+      (if my-enable-which-key-customized-description
+          (progn
+              (which-key-add-key-based-replacements "C-c n" "Noter")
+              (which-key-add-key-based-replacements "C-c n n" "Open session")
+              (which-key-add-key-based-replacements "C-c n i" "Insert")
+              (which-key-add-key-based-replacements "C-c n c" "Outline")
+              (which-key-add-key-based-replacements "C-c n k" "Kill session")
+              (which-key-add-key-based-replacements "C-c n h" "Hide other")
+              (which-key-add-key-based-replacements "C-c n s" "Sync")
+              (which-key-add-key-based-replacements "C-c n p" "Insert precise")
+              (which-key-add-key-based-replacements "C-c n a" "Save last location")
+          ))
 
       (message ">>> [ my-pdf-org-noter-local ] - rebind successfully. ")
   )
