--- a/emacs/configuration.org
+++ b/emacs/configuration.org
@@ -3974,7 +3974,7 @@ Before this can work, you have to make sure that you have the following settings
   (setq dired-omit-files "^\\...+$")
 
   (defun my-dired-toggle-hidden-files-local()
-    (define-key evil-normal-state-local-map (kbd "<leader>h") 'dired-omit-mode)
+    (define-key evil-normal-state-local-map (kbd "SPC h") 'dired-omit-mode)
     (define-key evil-normal-state-local-map (kbd "C-c h") 'dired-omit-mode)
 
     (if my-enable-which-key-customized-description
@@ -3990,7 +3990,7 @@ Before this can work, you have to make sure that you have the following settings
 
 #+BEGIN_SRC emacs-lisp
   (defun my-dired-toggle-read-only-local()
-    (define-key evil-normal-state-local-map (kbd "<leader>m") 'dired-toggle-read-only)
+    (define-key evil-normal-state-local-map (kbd "SPC m") 'dired-toggle-read-only)
     (define-key evil-normal-state-local-map (kbd "C-c m") 'dired-toggle-read-only)
 
     (if my-enable-which-key-customized-description
@@ -4016,7 +4016,7 @@ After going into the =wdired-change-to-wdired-mode=, here are the default keybin
   )
 
   (defun my-dired-yank-full-path-local()
-    (define-key evil-normal-state-local-map (kbd "<leader>yp") 'my-dired-yank-full-path)
+    (define-key evil-normal-state-local-map (kbd "SPC y p") 'my-dired-yank-full-path)
     (define-key evil-normal-state-local-map (kbd "C-c y p") 'my-dired-yank-full-path)
 
     (if my-enable-which-key-customized-description
